src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  overflow: hidden;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

img {
  /*
   * Prevent showing the context menu on touch devices.
   * => <img> element itself shouldn't have event listener.
   */
  pointer-event: none;
  user-select: none;
}

